--- a/src/app/all-stories/all-stories.component.html
+++ b/src/app/all-stories/all-stories.component.html
@@ -1,1 +1,67 @@
-<p>all stories works</p>
+<div class="grid" style="color: white;">
+    <div class="row prod-holder">
+      <div class="col-12 col-md-8">
+        <div class="row ml-2 ">
+          <div class="col-6 col-md-3 mt-5">
+            <div class="card bg-rehd">
+              <div class="row">
+                <div class="col-12">
+                  <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Story image" class="w-100 prod-img">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 mt-5">
+            <div class="card bg-rehd">
+              <div class="row">
+                <div class="col-12">
+                  <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Story image" class="w-100">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 mt-5">
+            <div class="card bg-rehd ">
+              <div class="row">
+                <div class="col-12">
+                  <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Story image" class="w-100">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 mt-5">
+            <div class="card bg-rehd ">
+              <div class="row">
+                <div class="col-12">
+                  <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Story image" class="w-100 prod-img">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Side bar to show stroy  -->
+      <div class="col-md-4 d-none d-md-block">
+        <div class="row">
+            <div class="col-6">
+                <div class="media"></div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="story_text">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">
+                <div class="col-6"></div>
+                <div class="col-6"></div>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
