--- a/src/app/allproducts/allproducts.component.html
+++ b/src/app/allproducts/allproducts.component.html
@@ -1,237 +1,226 @@
-<div class="row prod-holder">
-  <div class="col-8">
-    <div class="row">
-      <div class="col-3">
-        <div class="card bg-rehd prod-card">
-          <div class="row">
-            <div class="col-12">
-              <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100 prod-img">
+<div class="grid" style="color: white;">
+  <div class="row">
+    <div class="col-12 col-md-8">
+      <div class="row ml-2 ">
+        <div class="col-6 col-md-3 mt-5">
+          <div class="card bg-rehd">
+            <div class="row">
+              <div class="col-12">
+                <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100 prod-img">
+              </div>
+              <div class="col-12 subtitle">100% green nice shirt for the lady</div>
+              <div class="col-6">price</div>
+              <div class="col-6">discount</div>
             </div>
-            <div class="col-12 subtitle">100% green nice shirt for the lady</div>
-            <div class="col-6">price</div>
-            <div class="col-6">discount</div>
           </div>
         </div>
-      </div>
-      <div class="col-3">
-        <div class="card bg-rehd prod-card">
-          <div class="row">
-            <div class="col-12">
-              <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100">
-            </div>
-            <div class="col-12 subtitle">Subtitle</div>
-            <div class="col-6">price</div>
-            <div class="col-6">discount</div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="card bg-rehd prod-card">
-          <div class="row">
-            <div class="col-12">
-              <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100">
-            </div>
-            <div class="col-12 subtitle">Subtitle</div>
-            <div class="col-6">price</div>
-            <div class="col-6">discount</div>
-          </div>
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="card bg-rehd prod-card">
-          <div class="row">
-            <div class="col-12">
-              <a href="../../assets/Annotation 2020-09-25 190550.png" class="">
+        <div class="col-6 col-md-3 mt-5">
+          <div class="card bg-rehd">
+            <div class="row">
+              <div class="col-12">
                 <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100">
-              </a>
+              </div>
+              <div class="col-12 subtitle">Subtitle</div>
+              <div class="col-6">price</div>
+              <div class="col-6">discount</div>
             </div>
-            <div class="col-12 subtitle">Subtitle</div>
-            <div class="col-6">price</div>
-            <div class="col-6">discount</div>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 mt-5">
+          <div class="card bg-rehd ">
+            <div class="row">
+              <div class="col-12">
+                <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100">
+              </div>
+              <div class="col-12 subtitle">Subtitle</div>
+              <div class="col-6">price</div>
+              <div class="col-6">discount</div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-3 mt-5">
+          <div class="card bg-rehd ">
+            <div class="row">
+              <div class="col-12">
+                <img src="../../assets/Annotation 2020-09-25 190550.png" alt="Product image" class="w-100 prod-img">
+              </div>
+              <div class="col-12 subtitle">Subtitle</div>
+              <div class="col-6">price</div>
+              <div class="col-6">discount</div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Side bar to show products  -->
-  <div class="col-4 sidebar">
-    <div class="row">
-      <div class="col-12">
-        <div class="product-img">
-          <img src="" alt="Product Images slider" class="">
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="for w-100 bg-rehd">
-          Product Title
-        </div>
-
-      </div>
-
-      <div class="col-12 mt-2 mb-2">
-        <span class="for col-5 fl bg-rehd">
-          <span class="replies">Fashion</span>
-          <span class="comment">Category</span>
-        </span>
-
-        <span class="for col-5 fr bg-rehd">
-          <span class="replies">Men</span>
-          <span class="comment">For</span>
-        </span>
-
-      </div>
-
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="col-5 bg-rehd">
-          Price
-        </button>
-
-        <button mat-raised-button class="fr col-5  bg-rehd">
-          Discount price
-        </button>
-      </div>
-
-
-
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="col-5 bg-rehd">
-          weight
-        </button>
-
-        <button mat-raised-button class="fr col-5  bg-rehd">
-          length
-        </button>
-      </div>
-
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="col-5 bg-rehd">
-          mainMaterial
-        </button>
-
-        <button mat-raised-button class="fr col-5  bg-rehd">
-          stock Level
-        </button>
-      </div>
-
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="col-5 bg-rehd">
-          created On
-        </button>
-
-
-        <button mat-raised-button class="fr col-5  bg-rehd">
-          For
-        </button>
-      </div>
-
-
-      <div fxLayout="row" fxLayoutAlign="space-around center">
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-      </div>
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          size
-        </button>
-      </div>
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="bg-rehd">
-          color
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          color
-        </button>
-        <button mat-raised-button class="bg-rehd">
-          color
-        </button>
-        <button mat-raised-button class="bg-rehd">
-          color
-        </button>
-        <button mat-raised-button class="bg-rehd">
-          color
-        </button>
-      </div>
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="bg-rehd">
-          tags
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          tags
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          tags
-        </button>
-
-        <button mat-raised-button class="bg-rehd">
-          tags
-        </button>
-      </div>
-      <div class="col-12 mb-2">
-        <button mat-raised-button class="w-100 bg-rehd">
-          Discription
-        </button>
-      </div>
-      <div class="col-6">
-
-        <div class="features">
-          freatures
-          -
-          -
-        </div>
-      </div>
-      <div class="col-6">
-        <div class="specification">
-          specification
-          -
-          -
-        </div>
-      </div>
-      <div class="col-12">
-        <div class="reviews">
-          <div class="row">
-            <div class="col-12">
-              <div class="author">
-                author
-              </div>
+    <!-- Side bar to show products  -->
+    <div class="col-md-4 d-none d-md-block">
+      <div class="sidebar position-fixed">
+        <button mat-raised-button class="w-100 bg-rehd">Edit product</button>
+        <div class="row">
+          <div class="col-12">
+            <div class="product-img col-{{imgCol}}">
+              <a *ngFor="let img of selectedProduct.images" href="">
+                <img src="" alt="Product Images slider" class="prod-img">
+              </a>
             </div>
-            <div class="col-12">
-              <div class="reviewTitle">
-                review Title
-              </div>
+          </div>
+          <div class="col-12">
+            <div class="for w-100 bg-rehd">
+              Product Title
             </div>
-            <div class="col-12">
-              <div class="reviewText">
-                review Text
-              </div>
+
+          </div>
+
+          <div class="col-12 mt-2 mb-2">
+            <span class="cat col-5 fl bg-rehd">
+              <span class="front">Fashion</span>
+              <span class="back">Category</span>
+            </span>
+
+            <span class="for col-5 fr bg-rehd">
+              <span class="front">Men</span>
+              <span class="back">For</span>
+            </span>
+
+          </div>
+
+          <div class="col-12 mb-2">
+            <span class="price col-5 fl bg-rehd">
+              <span class="front">30000</span>
+              <span class="back">Price</span>
+            </span>
+
+            <span class="dc_price col-5 fr bg-rehd">
+              <span class="front">2000</span>
+              <span class="back">Discount Price</span>
+            </span>
+
+          </div>
+
+
+
+          <div class="col-12 mb-2">
+
+            <span class="weight col-5 fl bg-rehd">
+              <span class="front">30kg</span>
+              <span class="back">Weight</span>
+            </span>
+
+            <span class="length col-5 fr bg-rehd">
+              <span class="front">20kg</span>
+              <span class="back">Length</span>
+            </span>
+          </div>
+
+          <div class="col-12 mb-2">
+
+            <span class="mainMaterial col-5 fl bg-rehd">
+              <span class="front">Leather</span>
+              <span class="back">Main Material</span>
+            </span>
+
+            <span class="stock_level col-5 fr bg-rehd">
+              <span class="front">20</span>
+              <span class="back">Stock Level</span>
+            </span>
+          </div>
+
+          <div class="col-12 mb-2">
+            <span class="created_on col-5 fl bg-rehd">
+              <span class="front">24 Nov 2019</span>
+              <span class="back">created On</span>
+            </span>
+
+            <span class="stock_level col-5 fr bg-rehd">
+              <span class="front">20</span>
+              <span class="back">Stock Level</span>
+            </span>
+          </div>
+
+
+          <div class="col-12 mb-2">
+            <span class="size col-{{sizeCol}} bg-rehd">
+              <span class="front">L</span>
+              <span class="back">Size</span>
+            </span>
+          </div>
+          <div class="col-12 mb-2">
+            <div [ngClass]="colorCol">
+              <span class="color bg-rehd">
+                <span class="front">Red</span>
+                <span class="back">Color</span>
+              </span>
             </div>
+
+          </div>
+          <div class="col-12 mb-2">
+            <span class="tags col-{{tagCol}} bg-rehd">
+              <span class="front">nice shirt</span>
+              <span class="back">Tags</span>
+            </span>
+          </div>
+
+          <div class="col-12 mb-2">
+            <div class="for w-100 bg-rehd">
+              Description
+            </div>
+          </div>
+          <div class="col-6 mb-2">
+            <span class="features bg-rehd">
+              <span class="front">
+                -
+              </span>
+              <span class="back">
+                Features
+              </span>
+            </span>
+          </div>
+          <div class="col-6 mb-2">
+            <span class="specification bg-rehd">
+              <span class="front">
+                -
+              </span>
+              <span class="back">
+                Specification
+              </span>
+            </span>
+          </div>
+          <div class="col-12">
+            <mat-card class="bg-rehd mb-2">
+              <div class="row">
+                <div class="col-12">
+                  <strong>
+                    Izu chanel otugbo
+                  </strong>
+                </div>
+
+                <div class="col-12">
+                  Nice product
+                </div>
+                <div class="col-12">
+                  This is the best time in the history of this world i have tried anything like this and actally liked
+                  it
+                </div>
+              </div>
+            </mat-card>
+
+            <mat-card class="bg-rehd">
+              <div class="row">
+                <div class="col-12">
+                  <strong>
+                    Izu chanel otugbo
+                  </strong>
+                </div>
+
+                <div class="col-12">
+                  Nice product
+                </div>
+                <div class="col-12">
+                  This is the best time in the history of this world i have tried anything like this and actally liked
+                  it
+                </div>
+              </div>
+            </mat-card>
           </div>
         </div>
       </div>
