--- a/src/app/prod-holder/prod-holder.component.html
+++ b/src/app/prod-holder/prod-holder.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-    <div class="row mt-1">
+    <div class="row mt-2 ml-2">
       <div class="col-6"><button mat-raised-button class="w-100 bg-rehd" routerLink="add">Add product</button></div>
       <div class="col-6"><button mat-raised-button class="w-100 bg-rehd" routerLink="all">All Products</button></div>
     </div>
