--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -1,1 +1,138 @@
-<p>stats works!</p>
+<div class="container-fluid">
+  <div class="grid">
+      <!-- sales -->
+    <div class="row">
+        <div class="col-md-6 col-12">
+            <mat-card class="montly-sales">
+                line graph
+            </mat-card>
+        </div>
+        <div class="col-md-6 col-12">
+            <mat-card class="for-graph">
+                bar-chart
+            </mat-card>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12 ">
+            <mat-card class=""></mat-card>
+        </div>
+
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+    </div>
+
+    <!-- uploads -->
+    <div class="row">
+        <div class="col-md-6 col-12">
+            <mat-card class="montly-sales">
+                line graph
+            </mat-card>
+        </div>
+        <div class="col-md-6 col-12">
+            <mat-card class="for-graph">
+                bar-chart
+            </mat-card>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12 ">
+            <mat-card class=""></mat-card>
+        </div>
+
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+
+        <div class="col-md-6 col-12">
+            <mat-card class=""></mat-card>
+        </div>
+    </div>
+  </div>
+</div>
+<!-- 
+sales chart 
+
+     monthly line graph 
+         horizontal months 
+         vertical (count total number of sales(order)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+        
+
+     'FOR' bar chart 
+         horizontal - all five of the FORs 
+         vertical (count total number of sales(order)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+        
+
+     Title bar chats (5 of them) 
+        horizontal - all five of the FOR TITLEs 
+         vertical (count total number of sales(order)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+
+
+
+Uploaded Products 
+
+    monthly line graph 
+         horizontal months 
+         vertical (count total number of uploads(products)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+
+    'FOR' bar chart 
+        horizontal - all five of the FORs 
+        vertical (count total number of sales(order)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+
+    Title bar chats (5 of them) 
+        horizontal - all five of the FOR TITLEs 
+        vertical (count total number of sales(order)  = x)
+            if  
+                x <= 10 - 1 - 10;
+                10 < x <= 20 = 2 - 20;
+                20 < x <= 50 = 5 - 50;
+                > 50 = 10 - 100;
+           -->
