--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,3 +1,8 @@
+.new-con {
+  color: white;
+}
+
+
 .main-container {
   color: #e4e5e8
 }
@@ -7,7 +12,7 @@
 }
 
 .calender {
-  float: left;
+  // float: left;
   margin-top: 1em;
 }
 
@@ -15,7 +20,8 @@
   border-radius: 30px 0 0 30px;
   background: #181c3a;
   height: 39.5rem;
-  margin-right: -1em
+  // margin-right: -1em;
+  // float: right
 }
 
 .user-info {
